# RedstoneInside

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  travisbuild.sh
CMake/: FindBoost.cmake  cotire.cmake
licenses/: nlohmann json.txt
src/: CMakeLists.txt  binarydata.hpp  block.hpp  buffers.hpp  bytebuffer.cpp  bytebuffer.cxx  bytebuffer.hpp  chatmanager.cxx  chatmanager.hpp  checks.cxx  chunk.cxx  chunk.hpp  compressor.cxx  compressor.hpp  connectionlistener.cxx  connectionlistener.hpp  datatypes.hpp  enums.cxx  enums.hpp  event.hpp  exceptions.hpp  filesystem.hpp  hasserver.hpp  literaloperators.hpp  logger.cpp  logger.cxx  logger.hpp  main.cxx  mingwworkaround.hpp  networking.hpp  networking_asio.cpp  networking_linux.cpp  player.cpp  player.cxx  player.hpp  playerposition.hpp  position.hpp  region.cxx  region.hpp  server.cpp  (+20 more)
src/chat/: chatcomponent.cpp  chatcomponent.hpp  chatmanager.cpp  chatmanager.cxx  chatmanager.hpp  chatmanagerold.cxx  chatmanagerold.hpp  command.cxx  command.hpp  commandmanager.cxx  commandmanager.hpp  commandmanagerold.cxx  commandmanagerold.hpp  commandsender.cxx  commandsender.hpp  commandsender2.cxx  commandsender2.hpp  redicommands.cxx  redicommands.hpp
src/commands/: command.cpp  command.cxx  command.hpp  commanddata.hpp  commandmanager.cxx  commandmanager.hpp  commandsender.cxx  commandsender.hpp  redicommands.cpp  redicommands.cxx  redicommands.hpp
src/events/: chatmessage.hpp  chunkloaded.hpp  event.hpp  eventmanager.cxx  eventmanager.hpp  eventpriority.hpp  events.hpp  eventtype.hpp  functor.hpp  observer.hpp  packetwriter.cxx  packetwriter.hpp  playerdisconnected.hpp  playerjoin.hpp  playerlook.hpp  playerposition.hpp  playerpositionandlook.hpp  sendkeepalivering.hpp  sessiondisconnected.hpp  statusrequest.hpp  tick.hpp  vanillaobserver.cxx  vanillaobserver.hpp
src/eventsold/: event.cxx  event.hpp  eventmanager.cxx  observer.hpp  vanillaobserver.cxx  vanillaobserver.hpp
src/lockfree/: queue.hpp
src/messages/: chatmessage.hpp  chunkloaded.hpp  event.hpp  eventmanager.cpp  eventmanager.cxx  eventmanager.hpp  eventpriority.hpp  events.hpp  eventtype.hpp  playerdisconnected.hpp  playerjoin.hpp  playerlook.hpp  playerposition.hpp  playerpositionandlook.hpp  sendkeepalivering.hpp  sessiondisconnected.hpp  statusrequest.hpp  tick.hpp
src/nbt/: array.hpp  basic.hpp  bytesreader.cxx  bytesreader.hpp  byteswriter.cxx  byteswriter.hpp  compiletimemagic.hpp  compound.cpp  compound.cxx  compound.hpp  creator.cpp  creator.cxx  creator.hpp  datatypes.h  deserializer.cpp  deserializer.cxx  deserializer.hpp  end.hpp  exceptions.hpp  forward.hpp  list.cpp  list.cxx  list.hpp  nbt.hpp  prettyprint.cxx  prettyprint.hpp  prettyprinter.cpp  prettyprinter.cxx  prettyprinter.hpp  primitive.hpp  printer.cxx  printer.hpp  proxyclass.hpp  roottag.cpp  roottag.cxx  roottag.hpp  scalar.hpp  serializer.cpp  serializer.cxx  serializer.hpp  (+14 more)
src/pch/: pchh.hpp
src/protocol/: CMakeLists.txt  chunkserializer.cxx  chunkserializer.hpp  chunkserializer13.cpp  chunkserializer13.cxx  chunkserializer13.hpp  packet.cxx  packet.hpp  packetreader.cpp  packetreader.cxx  packetreader.hpp  packetwriter.cpp  packetwriter.cxx  packetwriter.hpp  packetwriternocopy.cxx  packetwriternocopy.hpp  protocol.hpp  protocol1_11.cxx  protocol1_11.hpp  varint.cpp  varint.hpp
src/protocol/packets/: packet.cxx  packet.hpp  packethandler.cpp  packethandler.cxx  packethandler.hpp
src/protocol/packets/server/: handshakepackets.cpp  handshakepackets.hpp  loginpackets.cpp  loginpackets.hpp  playpackets.cpp  playpackets.hpp  statuspackets.cpp  statuspackets.hpp
src/protocol/packets/server/handshake/: handshake.cpp  handshake.cxx  handshake.hpp
src/protocol/packets/server/login/: loginstart.cpp  loginstart.cxx  loginstart.hpp  loginsucces.cpp  loginsucces.cxx  loginsucces.hpp  setcompression.cxx  setcompression.hpp
src/protocol/packets/server/play/: chatmessage.cpp  chatmessage.cxx  chatmessage.hpp  chunkdata.cpp  chunkdata.cxx  chunkdata.hpp  disconnect.cxx  disconnect.hpp  entitylookandrelativemove.cpp  entitylookandrelativemove.cxx  entitylookandrelativemove.hpp  joingame.cpp  joingame.cxx  joingame.hpp  keepalive.cxx  keepalive.hpp  playerlistitem.cpp  playerlistitem.cxx  playerlistitem.hpp  playerlook.cxx  playerlook.hpp  playerposition.cpp  playerposition.cxx  playerposition.hpp  playerpositionandlook.cpp  playerpositionandlook.cxx  playerpositionandlook.hpp  spawnplayer.cpp  spawnplayer.cxx  spawnplayer.hpp  spawnposition.cxx  spawnposition.hpp  timeupdate.hpp  unloadchunk.cxx  unloadchunk.hpp
src/protocol/packets/server/status/: ping.cxx  ping.hpp  pong.cpp  pong.cxx  pong.hpp  request.cxx  request.hpp  response.cxx  response.hpp
src/util/: base64.cxx  base64.hpp  compressor.cpp  compressor.hpp  file.cxx  file.hpp  maths.cpp  maths.cxx  maths.hpp  random.hpp  string.cpp  string.hpp  threadgroup.hpp  time.cxx  time.hpp  util.cxx  util.hpp
src/world/: anvil.cxx  anvil.hpp  anvilregion.cpp  anvilregion.cxx  anvilregion.hpp  biome.hpp  block.hpp  chunk.cxx  chunk.hpp  chunkcolumn.hpp  chunkdeseriazer.cxx  chunkdeseriazer.hpp  chunkmanager.cxx  chunkmanager.hpp  chunkserializer.cpp  chunkserializer.cxx  chunkserializer.hpp  memoryregion.cxx  memoryregion.hpp  region.cxx  region.hpp  terraingenerator.cpp  terraingenerator.cxx  terraingenerator.hpp
